--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
-  <<link href="https://fonts.googleapis.com/css2?family=Spartan:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@100;300;400;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -59,10 +59,10 @@
         <p class="text-center">Create your own chatbot hassle-free!</p>
         <form class="push center-content" action="index.html" method="post">
           <label for="email"></label>
-          <input type="email" name="email">
+          <input id="email" type="email" placeholder="Enter your email" name="email">
         </form>
         <div class="text-center">
-          <span><a class="btn" href="sign-up.html">Sign Up</a></span>
+          <button class="btn" type="submit">Sign Up</span>
         </div>
       </div>
     </section>
