--- a/pricing.html
+++ b/pricing.html
@@ -32,7 +32,7 @@
 
   <main role="banner" id="main" tabindex="0">
     <section id="packages" class="island push-1-2">
-      <h2 class="not-bold text-center">Packages</h2>
+      <h2 class="text-center">Packages</h2>
       <div class="grid center-content">
         <div class="unit xs-1 s-1 m-1-3 l-1-3 card push push-r">
           <h3 class="card-title island-1-2 push-0 bold text-center">Starter</h3>
@@ -69,6 +69,19 @@
               <li>• data security</li>
             </ul>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="free-trial pad-b pad-t">
+      <div class="wrapper">
+        <h2 class="text-center bold giga">Start your free trial today!</h2>
+        <form class="push center-content" action="index.html" method="post">
+          <label for="email"></label>
+          <input id="email" type="email" placeholder="Enter your email" name="email">
+        </form>
+        <div>
+          <button class="btn text-center" type="submit">SIGN UP</span>
         </div>
       </div>
     </section>
