--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <input id="email" type="email" placeholder="Enter your email" name="email">
         </form>
         <div class="text-center">
-          <button class="btn" type="submit">Sign Up</span>
+          <button class="btn" type="submit">Sign Up</button>
         </div>
       </div>
     </section>
