--- a/pricing.html
+++ b/pricing.html
@@ -30,7 +30,7 @@
     </div>
   </header>
 
-  <main role="banner" id="main" tabindex="0">
+  <main role="main" id="main" tabindex="0">
     <section id="packages" class="island push-1-2">
       <h2 class="text-center">Packages</h2>
       <div class="grid center-content">
@@ -81,7 +81,7 @@
           <input id="email" type="email" placeholder="Enter your email" name="email">
         </form>
         <div>
-          <button class="btn text-center" type="submit">SIGN UP</span>
+          <button class="btn text-center" type="submit">SIGN UP</button>
         </div>
       </div>
     </section>
