Change the font sizes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
       <div class="unit xs-1 s-1 m-3-4 l-3-4">
         <nav role="navigation" id="nav" tabindex="0" class="gutter text-right">
           <ul class="nav list-group list-group-inline">
-            <li><a class="current" href="index.html">Home</a></li>
             <li><a href="tour.html">Features</a></li>
             <li><a href="pricing.html">Pricing</a></li>
             <li><a href="sign-in.html">Sign In</a></li>
@@ -35,7 +34,7 @@
       <div class="grid grid-middle wrapper">
         <div class="unit xs-1 s-1 m-1-2 l-1-2">
           <h2 class="not-bold">One-on-one support to create your own chatbot.</h2>
-          <p class="">It's fast and free!</p>
+          <p class="push-1-2">It's fast and free!</p>
           <div>
             <span><a class="btn" href="sign-up.html">Sign Up</a></span>
           </div>
@@ -74,7 +73,7 @@
         </div>
         <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
           <p class="text-center push-1-2 peta">"Chatterbot has helped us grow our business. We know exactly what our customers need and how to better serve them."</p>
-          <p class="text-center push-0">—Amazon</p>
+          <p class="text-center push-0 milli"><span class="bold">Jeremy White</span>, Director of Marketing at Amazon</p>
         </div>
       </div>
     </section>
