--- a/tour.html
+++ b/tour.html
@@ -20,7 +20,6 @@
       <div class="unit xs-1 s-1 m-3-4 l-3-4">
         <nav role="navigation" id="nav" tabindex="0" class="gutter text-right">
           <ul class="nav list-group list-group-inline">
-            <li><a href="index.html">Home</a></li>
             <li><a class="current" href="tour.html">Features</a></li>
             <li><a href="pricing.html">Pricing</a></li>
             <li><a href="sign-in.html">Sign In</a></li>
@@ -31,30 +30,48 @@
   </header>
 
   <main role="main" id="main" tabindex="0">
+
     <section id="templates" tabindex="0" class="island wrapper">
       <h2 class="text-center pad-t gutter-2">Choose from one of our existing templates to create your own chatbot.</h2>
       <div class="grid">
         <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
           <img class="img-flex pad-b" src="images/classic.svg" alt="">
-          <p class="text-center bold tera push-0">Classic</p>
+          <p class="text-center bold tera push">Classic</p>
         </div>
         <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
           <img class="img-flex pad-b" src="images/modern.svg" alt="">
-          <p class="text-center bold tera push-0">Modern</p>
+          <p class="text-center bold tera push">Modern</p>
         </div>
       </div>
     </section>
-    <section id="customization" tabindex="0" class="island wrapper">
+
+    <section class="island">
+      <table class="island wrapper">
+        <caption class="not-italic text-center bold peta">Features</caption>
+        <thead>
+          <th scope="col">Classic</th>
+          <th scope="col">Modern</th>
+        </thead>
+        <tbody>
+
+        </tbody>
+
+      </table>
+    </section>
+
+    <section id="customization" tabindex="0" class="island wrapper customization">
       <div class="grid grid-middle">
         <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
           <img class="img-flex island-2" src="images/support.svg" alt="">
         </div>
-        <div class="unit xs-1 s-1 m-1-2 l-1-2">
-          <h2 class="text-upper not-bold exa text-center">Customization</h2>
-          <p class="text-center giga">We offer free customization services to meet your needs. Contact one of our customer service representatives for more information.</p>
+        <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center">
+          <h2 class="bold exa">Customization</h2>
+          <p class="giga">We offer free customization services to meet your needs. Contact one of our customer service representatives for more information.</p>
+          <a class="bold learn-more" href="#">Learn more...</a>
         </div>
       </div>
     </section>
+
   </main>
 
   <footer role="contentinfo" class="island">
