--- a/pricing.html
+++ b/pricing.html
@@ -20,7 +20,6 @@
       <div class="unit xs-1 s-1 m-3-4 l-3-4">
         <nav role="navigation" id="nav" tabindex="0" class="gutter text-right">
           <ul class="nav list-group list-group-inline">
-            <li><a href="index.html">Home</a></li>
             <li><a href="tour.html">Features</a></li>
             <li><a class="current" href="pricing.html">Pricing</a></li>
             <li><a href="sign-in.html">Sign In</a></li>
@@ -37,37 +36,40 @@
         <div class="unit xs-1 s-1 m-1-3 l-1-3 card push push-r">
           <h3 class="card-title island-1-2 push-0 bold text-center">Starter</h3>
           <div class="island">
-            <p class="zetta text-center push-1-2">$59<span class="milli">/mo</span></p>
-            <ul class="push-0 list-group gutter-1-2 milli">
-              <li>• 1 chatbot</li>
-              <li>• 1 week one-on-one support</li>
-              <li>• basic reporting</li>
-              <li>• data security</li>
+            <p class="tena text-center push-1-2"><sup class="milli">$</sup>59<span class="milli">/mo</span></p>
+            <ul class="list-group gutter-1-2 milli">
+              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> 1 chatbot</li>
+              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> 1 week one-on-one support</li>
+              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> basic reporting</li>
+              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> data security</li>
             </ul>
+            <a class="pricing-btn text-center milli" href="#">Learn More</a>
           </div>
         </div>
         <div class="unit xs-1 s-1 m-1-3 l-1-3 card push push-r">
           <h3 class="card-title island-1-2 push-0 bold text-center">Team</h3>
           <div class="island">
-            <p class="zetta text-center push-1-2">$139<span class="milli">/mo</span></p>
-            <ul class="push-0 list-group gutter-1-2 milli">
-              <li>• 6 chatbots</li>
-              <li>• 3 months one-on-one support</li>
-              <li>• advanced reporting</li>
-              <li>• data security</li>
+            <p class="tena text-center push-1-2"><sup class="milli">$</sup>139<span class="milli">/mo</span></p>
+            <ul class="list-group gutter-1-2 milli">
+              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> 6 chatbots</li>
+              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> 3 months one-on-one support</li>
+              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> advanced reporting</li>
+              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> data security</li>
             </ul>
+            <a class="pricing-btn text-center milli" href="#">Learn More</a>
           </div>
         </div>
         <div class="unit xs-1 s-1 m-1-3 l-1-3 card push">
           <h3 class="card-title island-1-2 push-0 bold text-center">Business</h3>
           <div class="island">
-            <p class="zetta text-center push-1-2">$299<span class="milli">/mo</span></p>
-            <ul class="push-0 list-group gutter-1-2 milli">
-              <li>• unlimited chatbots</li>
-              <li>• unlimited one-on-one support</li>
-              <li>• premium reporting</li>
-              <li>• data security</li>
+            <p class="tena text-center push-1-2"><sup class="milli">$</sup>299<span class="milli">/mo</span></p>
+            <ul class="list-group gutter-1-2 milli">
+              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> unlimited chatbots</li>
+              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> unlimited one-on-one support</li>
+              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> premium reporting</li>
+              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> data security</li>
             </ul>
+            <a class="pricing-btn text-center milli" href="#">Learn More</a>
           </div>
         </div>
       </div>
@@ -143,3 +145,6 @@
       </div>
     </div>
   </footer>
+
+</body>
+</html>
