--- a/sign-up.html
+++ b/sign-up.html
@@ -20,7 +20,6 @@
       <div class="unit xs-1 s-1 m-3-4 l-3-4">
         <nav role="navigation" id="nav" tabindex="0" class="gutter text-right">
           <ul class="nav list-group list-group-inline">
-            <li><a href="index.html">Home</a></li>
             <li><a href="tour.html">Features</a></li>
             <li><a href="pricing.html">Pricing</a></li>
             <li><a class="current" href="sign-in.html">Sign In</a></li>
@@ -30,7 +29,7 @@
     </div>
   </header>
 
-  <main>
+  <main role="main" id="main" tabindex="0">
     <section class="island pad-b-2">
       <h2 class="text-upper text-center pad-t-2">Create A New Account</h2>
       <form class="push center-content" action="https://formspree.io/mato0039@algonquinlive.com" method="POST">
@@ -97,3 +96,6 @@
       </div>
     </div>
   </footer>
+
+</body>
+</html>
