--- a/pricing.html
+++ b/pricing.html
@@ -12,6 +12,11 @@
 </head>
 <body>
 
+  <ul class="skip-links">
+    <li><a href="#main">Jump to main content</a></li>
+    <li><a href="#nav">Jump to navigation</a></li>
+  </ul>
+
   <header role="banner" class="pad-t-1-2">
     <div class="grid grid-middle wrapper">
       <div class="unit xs-1 s-1 m-1-4 l-1-4">
@@ -75,7 +80,7 @@
       </div>
     </section>
 
-    <section class="free-trial pad-b pad-t">
+    <section id="trial" class="free-trial pad-b pad-t push-2" tabindex="0">
       <div class="wrapper">
         <h2 class="text-center bold giga">Start your free trial today!</h2>
         <form class="push center-content" action="index.html" method="post">
@@ -88,8 +93,27 @@
       </div>
     </section>
 
-    <section>
-
+    <section id="faq" class="push" tabindex="0">
+      <div class="wrapper">
+        <h2 class="bold text-center">FAQ</h2>
+        <div class="grid">
+          <div class="unit xs-1 s-1 m-1-2 l-2 gutter">
+            <p class="bold push-1-2">How do I know if I need a chatbot for my website?</p>
+            <p>All businesses can benefit from a chatbot. Your customers will appreciate being able to have their questions answered when a human agent is not available.</p>
+          </div>
+          <div class="unit xs-1 s-1 m-1-2 l-2 gutter">
+            <p class="bold push-1-2">How does a chatbot improve customer service?</p>
+            <p>A chatbot will help your customers receive the answers they need anytime they want, in the longterm, ensuring 100% customer satisfaction.</p>
+          </div>
+          <div class="unit xs-1 s-1 m-1-2 l-2 gutter">
+            <p class="bold push-1-2">What security concerns are there with a chatbot?</p>
+            <p>As long as your website is set up securely, there is no need to worry about any security breaches with a chatbot.</p>
+          </div>
+          <div class="unit xs-1 s-1 m-1-2 l-2 gutter">
+            <p class="bold push-1-2">How will I know if having a chatbot is successful?</p>
+            <p>Customer feedback will be essential in order to measure your chatbot’s success. As well as customer feedback, your agents will be crucial in providing feedback.</p>
+          </div>
+        </div>
     </section>
 
   </main>
@@ -109,6 +133,7 @@
           <li class="bold"><a href="pricing.html">Pricing</a>
             <ul class="micro list-group push-0 not-bold">
               <li><a href="pricing.html#packages">Packages</a></li>
+              <li><a href="pricing.html#trial">Free trial</a></li>
               <li><a href="pricing.html#faq">FAQ</a></li>
             </ul>
           </li>
