--- a/sign-in.html
+++ b/sign-in.html
@@ -12,6 +12,11 @@
 </head>
 <body>
 
+  <ul class="skip-links">
+    <li><a href="#main">Jump to main content</a></li>
+    <li><a href="#nav">Jump to navigation</a></li>
+  </ul>
+
   <header role="banner" class="pad-t-1-2">
     <div class="grid grid-middle wrapper">
       <div class="unit xs-1 s-1 m-1-4 l-1-4">
@@ -57,6 +62,7 @@
           <li class="bold"><a href="pricing.html">Pricing</a>
             <ul class="micro list-group push-0 not-bold">
               <li><a href="pricing.html#packages">Packages</a></li>
+              <li><a href="pricing.html#trial">Free trial</a></li>
               <li><a href="pricing.html#faq">FAQ</a></li>
             </ul>
           </li>
