--- a/tour.html
+++ b/tour.html
@@ -12,6 +12,11 @@
 </head>
 <body>
 
+  <ul class="skip-links">
+    <li><a href="#main">Jump to main content</a></li>
+    <li><a href="#nav">Jump to navigation</a></li>
+  </ul>
+
   <header role="banner" class="pad-t-1-2">
     <div class="grid grid-middle wrapper">
       <div class="unit xs-1 s-1 m-1-4 l-1-4">
@@ -45,22 +50,30 @@
       </div>
     </section>
 
-    <section class="island">
-      <table class="island wrapper">
-        <caption class="not-italic text-center bold peta">Features</caption>
-        <thead>
-          <th scope="col">Classic</th>
-          <th scope="col">Modern</th>
-        </thead>
-        <tbody>
-
-        </tbody>
-
-      </table>
+    <section id="features" tabindex="0" class="island features">
+      <div class="scrollable">
+        <table class="wrapper push">
+          <caption class="not-italic text-center bold peta">Features</caption>
+          <thead>
+            <tr>
+              <th scope="col">No Coding</th>
+              <th scope="col">Beautiful templates</th>
+              <th scope="col">Fast loading-times
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Edit your templates without having to code a single line!</td>
+              <td>Create personalized templates that are created with your clients in mind.</td>
+              <td>Your chatbot will appear on your site in less than 60 ms!</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </section>
 
-    <section id="customization" tabindex="0" class="island wrapper customization">
-      <div class="grid grid-middle">
+    <section id="customization" tabindex="0" class="island customization">
+      <div class="grid grid-middle wrapper">
         <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
           <img class="img-flex island-2" src="images/support.svg" alt="">
         </div>
@@ -89,6 +102,7 @@
           <li class="bold"><a href="pricing.html">Pricing</a>
             <ul class="micro list-group push-0 not-bold">
               <li><a href="pricing.html#packages">Packages</a></li>
+              <li><a href="pricing.html#trial">Free trial</a></li>
               <li><a href="pricing.html#faq">FAQ</a></li>
             </ul>
           </li>
