--- a/index.html
+++ b/index.html
@@ -62,19 +62,23 @@
         <h3 class="text-center">Find out what your client needs with Chatterbot</h3>
         <p class="text-center">Create your own chatbot hassle-free!</p>
         <form class="push center-content" action="index.html" method="post">
-          <label for="email"></label>
-          <input id="email" type="email" placeholder="Enter your email" name="email">
+          <div class="grid grid-middle center-content">
+            <div class="unit xs-1 s-1 m-3-4 m-3-4 gutter push">
+              <label class="hidden" for="email">Email</label>
+              <input id="email" type="email" placeholder="Enter your email" name="email" required>
+            </div>
+            <div class="unit xs-1 s-1 m-1-4 m-1-4 text-center right inline push">
+              <button class="btn" type="submit">Sign Up</button>
+            </div>
+          </div>
         </form>
-        <div class="text-center">
-          <button class="btn" type="submit">Sign Up</button>
-        </div>
       </div>
     </section>
 
     <section id="testimonial" tabindex="0" class="testimonial island">
       <div class="grid grid-middle wrapper">
-        <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
-          <img class="img-flex" src="images/testimonial.jpg" alt="">
+        <div class="unit xs-1 s-1 m-1-2 l-1-2 island embed embed-1by1">
+          <img class="embed-item img-flex" src="images/testimonial.jpg" alt="">
         </div>
         <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
           <p class="text-center push-1-2 peta">"Chatterbot has helped us grow our business. We know exactly what our customers need and how to better serve them."</p>
