--- a/tour.html
+++ b/tour.html
@@ -39,8 +39,8 @@
     <section id="templates" tabindex="0" class="island wrapper">
       <h2 class="text-center pad-t gutter-2">Choose from one of our existing templates to create your own chatbot.</h2>
       <div class="grid">
-        <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
-          <img class="img-flex pad-b" src="images/classic.svg" alt="">
+        <div class="unit xs-1 s-1 m-1-2 l-1-2 island embed embed-9by16">
+          <img class="img-flex pad-b embed-item" src="images/classic.svg" alt="">
           <p class="text-center bold tera push">Classic</p>
         </div>
         <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
@@ -53,12 +53,12 @@
     <section id="features" tabindex="0" class="island features">
       <div class="scrollable">
         <table class="wrapper push">
-          <caption class="not-italic text-center bold peta">Features</caption>
+          <caption class="not-italic text-center bold peta pad-t">Features</caption>
           <thead>
             <tr>
               <th scope="col">No Coding</th>
               <th scope="col">Beautiful templates</th>
-              <th scope="col">Fast loading-times
+              <th scope="col">Fast loading-times</th>
             </tr>
           </thead>
           <tbody>
@@ -82,6 +82,23 @@
           <p class="giga">We offer free customization services to meet your needs. Contact one of our customer service representatives for more information.</p>
           <a class="bold learn-more" href="#">Learn more...</a>
         </div>
+      </div>
+    </section>
+
+    <section id="trial" class="free-trial pad-b pad-t" tabindex="0">
+      <div class="wrapper">
+        <h2 class="text-center bold">Start your free trial today!</h2>
+        <form class="push center-content" action="index.html" method="post">
+          <div class="grid grid-middle center-content">
+            <div class="unit xs-1 s-1 m-3-4 m-3-4 gutter push-1-2">
+              <label class="hidden" for="email">Email</label>
+              <input id="email" type="email" placeholder="Enter your email" name="email" required>
+            </div>
+            <div class="unit xs-1 s-1 m-1-4 m-1-4 text-center right inline push-1-2">
+              <button class="btn" type="submit">Sign Up</button>
+            </div>
+          </div>
+        </form>
       </div>
     </section>
 
