Fix the alignment

--- a/sign-up.html
+++ b/sign-up.html
@@ -35,7 +35,7 @@
   </header>
 
   <main role="main" id="main" tabindex="0">
-    <section class="island pad-b-2 sign-in">
+    <section class="island pad-b-2 sign-in" id="new-account">
       <h2 class="text-upper text-center pad-t-2">Create A New Account</h2>
       <form class="push center-content" action="https://formspree.io/mato0039@algonquinlive.com" method="POST">
         <label class="micro" for="email">Enter your email</label>
