--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header role="banner" class="pad-t-1-2">
     <div class="grid grid-middle wrapper">
       <div class="unit xs-1 s-1 m-1-4 l-1-4">
-        <a href="index.html"><h1 class="gutter text-center nina bold">chatterbot</h1></a>
+        <a href="index.html"><h1 class="gutter nina bold">chatterbot</h1></a>
       </div>
       <div class="unit xs-1 s-1 m-3-4 l-3-4">
         <nav role="navigation" id="nav" tabindex="0" class="gutter text-right">
@@ -37,7 +37,7 @@
   <main role="main" id="main" tabindex="0">
     <section id="support" tabindex="0" class="island push-1-2">
       <div class="grid grid-middle wrapper">
-        <div class="unit xs-1 s-1 m-1-2 l-1-2">
+        <div class="unit push-xs-1 push-s-1 m-1-2 l-1-2 support">
           <h2 class="not-bold">One-on-one support to create your own chatbot.</h2>
           <p class="push-1-2">It's fast and free!</p>
           <div>
@@ -45,7 +45,7 @@
           </div>
         </div>
         <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter pad-t">
-          <img class="img-flex" src="images/phone.svg" alt="">
+          <img class="img-flex" src="images/phone.svg" alt="" aria-details="phone">
         </div>
       </div>
     </section>
@@ -53,7 +53,7 @@
     <section id="builder" tabindex="0" class="builder island">
       <div class="wrapper">
         <h2 class="text-center bold">Our Chatbot Builder</h2>
-        <img class="img-flex gutter push-1-2" src="images/builder.svg" alt="">
+        <img class="img-flex gutter push-1-2" src="images/builder.svg" alt="" aria-details="builder-application">
       </div>
     </section>
 
@@ -78,7 +78,7 @@
     <section id="testimonial" tabindex="0" class="testimonial island">
       <div class="grid grid-middle wrapper">
         <div class="unit xs-1 s-1 m-1-2 l-1-2 island embed embed-1by1">
-          <img class="embed-item img-flex" src="images/testimonial.jpg" alt="">
+          <img class="embed-item img-flex" src="images/testimonial.jpg" alt="" aria-details="jeremy-white">
         </div>
         <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
           <p class="text-center push-1-2 peta">"Chatterbot has helped us grow our business. We know exactly what our customers need and how to better serve them."</p>
@@ -128,7 +128,7 @@
         </ul>
       </nav>
       <div class="grid grid-middle pad-t-1-2 push">
-        <div class="unit xs-1 s-1 m-3-4 l-3-4 push-1-2">
+        <div class="unit xs-1 s-1 m-3-4 l-3-4 push-1-2 copyright">
           <small class="micro">Copyright ©2020 Chatterbot</small>
         </div>
         <div class="unit xs-1 s-1 m-1-4 l-1-4 push-1-2 social">
@@ -136,7 +136,6 @@
           <img class="img-flex" src="images/instagram.svg" alt="">
           <img class="img-flex" src="images/twitter.svg" alt="">
         </div>
-
       </div>
     </div>
   </footer>
