--- a/pricing.html
+++ b/pricing.html
@@ -37,8 +37,8 @@
   <main role="main" id="main" tabindex="0">
     <section id="packages" class="island push-1-2">
       <h2 class="text-center">Packages</h2>
-      <div class="grid center-content">
-        <div class="unit xs-1 s-1 m-1-3 l-1-3 card push push-r">
+      <div class="grid grid-stretch center-content">
+        <div class="unit xs-1 s-1 m-1-3 l-1-3 card push content-distribute">
           <h3 class="card-title island-1-2 push-0 bold text-center">Starter</h3>
           <div class="island">
             <p class="tena text-center push-1-2"><sup class="milli">$</sup>59<span class="milli">/mo</span></p>
@@ -48,10 +48,10 @@
               <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> basic reporting</li>
               <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> data security</li>
             </ul>
-            <a class="pricing-btn text-center milli" href="#">Learn More</a>
+            <a class="pricing-btn text-center milli" href="#" aria-label="Learn more about the starter package">Learn More</a>
           </div>
         </div>
-        <div class="unit xs-1 s-1 m-1-3 l-1-3 card push push-r">
+        <div class="unit xs-1 s-1 m-1-3 l-1-3 card push content-distribute">
           <h3 class="card-title island-1-2 push-0 bold text-center">Team</h3>
           <div class="island">
             <p class="tena text-center push-1-2"><sup class="milli">$</sup>139<span class="milli">/mo</span></p>
@@ -61,10 +61,10 @@
               <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> advanced reporting</li>
               <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> data security</li>
             </ul>
-            <a class="pricing-btn text-center milli" href="#">Learn More</a>
+            <a class="pricing-btn text-center milli" href="#" aria-label="Learn more about the team package">Learn More</a>
           </div>
         </div>
-        <div class="unit xs-1 s-1 m-1-3 l-1-3 card push">
+        <div class="unit xs-1 s-1 m-1-3 l-1-3 card push content-distribute">
           <h3 class="card-title island-1-2 push-0 bold text-center">Business</h3>
           <div class="island">
             <p class="tena text-center push-1-2"><sup class="milli">$</sup>299<span class="milli">/mo</span></p>
@@ -74,7 +74,7 @@
               <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> premium reporting</li>
               <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> data security</li>
             </ul>
-            <a class="pricing-btn text-center milli" href="#">Learn More</a>
+            <a class="pricing-btn text-center milli" href="#" aria-label="Learn more about the business package">Learn More</a>
           </div>
         </div>
       </div>
