--- a/tour.html
+++ b/tour.html
@@ -40,11 +40,11 @@
       <h2 class="text-center pad-t gutter-2">Choose from one of our existing templates to create your own chatbot.</h2>
       <div class="grid">
         <div class="unit xs-1 s-1 m-1-2 l-1-2 island embed embed-9by16">
-          <img class="img-flex pad-b embed-item" src="images/classic.svg" alt="">
+          <img class="img-flex pad-b embed-item" src="images/classic.svg" alt="" aria-details="classic-template">
           <p class="text-center bold tera push">Classic</p>
         </div>
         <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
-          <img class="img-flex pad-b" src="images/modern.svg" alt="">
+          <img class="img-flex pad-b" src="images/modern.svg" alt="" aria-details="modern-template">
           <p class="text-center bold tera push">Modern</p>
         </div>
       </div>
@@ -75,10 +75,10 @@
     <section id="customization" tabindex="0" class="island customization">
       <div class="grid grid-middle wrapper">
         <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
-          <img class="img-flex island-2" src="images/support.svg" alt="">
+          <img class="img-flex island-2" src="images/support.svg" alt="" aria-details="support-icon">
         </div>
         <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center">
-          <h2 class="bold exa">Customization</h2>
+          <h2 class="text-center bold exa">Customization</h2>
           <p class="giga">We offer free customization services to meet your needs. Contact one of our customer service representatives for more information.</p>
           <a class="bold learn-more" href="#">Learn more...</a>
         </div>
