Change the buttons

--- a/pricing.html
+++ b/pricing.html
@@ -43,10 +43,10 @@
           <div class="island">
             <p class="tena text-center push-1-2"><sup class="milli">$</sup>59<span class="milli">/mo</span></p>
             <ul class="list-group gutter-1-2 milli">
-              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> 1 chatbot</li>
-              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> 1 week one-on-one support</li>
-              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> basic reporting</li>
-              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> data security</li>
+              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt="" aria-details="check-mark"></i> 1 chatbot</li>
+              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt="" aria-details="check-mark"></i> 1 week one-on-one support</li>
+              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt="" aria-details="check-mark"></i> basic reporting</li>
+              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt="" aria-details="check-mark"></i> data security</li>
             </ul>
             <a class="pricing-btn text-center milli" href="#" aria-label="Learn more about the starter package">Learn More</a>
           </div>
@@ -56,10 +56,10 @@
           <div class="island">
             <p class="tena text-center push-1-2"><sup class="milli">$</sup>139<span class="milli">/mo</span></p>
             <ul class="list-group gutter-1-2 milli">
-              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> 6 chatbots</li>
-              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> 3 months one-on-one support</li>
-              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> advanced reporting</li>
-              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> data security</li>
+              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt="" aria-details="check-mark"></i> 6 chatbots</li>
+              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt="" aria-details="check-mark"></i> 3 months one-on-one support</li>
+              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt="" aria-details="check-mark"></i> advanced reporting</li>
+              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt="" aria-details="check-mark"></i> data security</li>
             </ul>
             <a class="pricing-btn text-center milli" href="#" aria-label="Learn more about the team package">Learn More</a>
           </div>
@@ -69,10 +69,10 @@
           <div class="island">
             <p class="tena text-center push-1-2"><sup class="milli">$</sup>299<span class="milli">/mo</span></p>
             <ul class="list-group gutter-1-2 milli">
-              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> unlimited chatbots</li>
-              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> unlimited one-on-one support</li>
-              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> premium reporting</li>
-              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt=""></i> data security</li>
+              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt="" aria-details="check-mark"></i> unlimited chatbots</li>
+              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt="" aria-details="check-mark"></i> unlimited one-on-one support</li>
+              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt="" aria-details="check-mark"></i> premium reporting</li>
+              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt="" aria-details="check-mark"></i> data security</li>
             </ul>
             <a class="pricing-btn text-center milli" href="#" aria-label="Learn more about the business package">Learn More</a>
           </div>
@@ -87,7 +87,7 @@
           <div class="grid grid-middle center-content">
             <div class="unit xs-1 s-1 m-3-4 m-3-4 gutter push-1-2">
               <label for="email"></label>
-              <input id="email" type="email" placeholder="Enter your email" name="email" required>
+              <input id="email" type="email" placeholder="Enter your email" name="email" aria-label="enter your email" required>
             </div>
             <div class="unit xs-1 s-1 m-1-4 m-1-4 text-center right inline push-1-2">
               <button class="btn" type="submit">Sign Up</button>
@@ -167,9 +167,9 @@
           <small class="micro">Copyright ©2020 Chatterbot</small>
         </div>
         <div class="unit xs-1 s-1 m-1-4 l-1-4 push-1-2 social">
-          <img class="img-flex" src="images/facebook.svg" alt="">
-          <img class="img-flex" src="images/instagram.svg" alt="">
-          <img class="img-flex" src="images/twitter.svg" alt="">
+          <img class="img-flex" src="images/facebook.svg" alt="" aria-details="facebook-icon">
+          <img class="img-flex" src="images/instagram.svg" alt="" aria-details="instagram-icon">
+          <img class="img-flex" src="images/twitter.svg" alt="" aria-details="twitter-icon">
         </div>
 
       </div>
