--- a/tour.html
+++ b/tour.html
@@ -80,7 +80,7 @@
         <div class="unit xs-1 s-1 m-1-2 l-1-2 text-center">
           <h2 class="text-center bold exa">Customization</h2>
           <p class="giga">We offer free customization services to meet your needs. Contact one of our customer service representatives for more information.</p>
-          <a class="bold learn-more" href="#">Learn more...</a>
+          <a class="bold learn-more" href="#" aria-label="Learn more about customization">Learn more...</a>
         </div>
       </div>
     </section>
@@ -92,7 +92,7 @@
           <div class="grid grid-middle center-content">
             <div class="unit xs-1 s-1 m-3-4 m-3-4 gutter push-1-2">
               <label class="hidden" for="email">Email</label>
-              <input id="email" type="email" placeholder="Enter your email" name="email" required>
+              <input id="email" type="email" placeholder="Enter your email" name="email" aria-label="enter your email" required>
             </div>
             <div class="unit xs-1 s-1 m-1-4 m-1-4 text-center right inline push-1-2">
               <button class="btn" type="submit">Sign Up</button>
@@ -148,9 +148,9 @@
           <small class="micro">Copyright ©2020 Chatterbot</small>
         </div>
         <div class="unit xs-1 s-1 m-1-4 l-1-4 push-1-2 social">
-          <img class="img-flex" src="images/facebook.svg" alt="">
-          <img class="img-flex" src="images/instagram.svg" alt="">
-          <img class="img-flex" src="images/twitter.svg" alt="">
+          <img class="img-flex" src="images/facebook.svg" alt="" aria-details="facebook-icon">
+          <img class="img-flex" src="images/instagram.svg" alt="" aria-details="instagram-icon">
+          <img class="img-flex" src="images/twitter.svg" alt="" aria-details="twitter-icon">
         </div>
 
       </div>
