--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <div class="grid grid-middle center-content">
             <div class="unit xs-1 s-1 m-3-4 m-3-4 gutter push">
               <label class="hidden" for="email">Email</label>
-              <input id="email" type="email" placeholder="Enter your email" name="email" required>
+              <input id="email" type="email" placeholder="Enter your email" name="email" aria-label="enter your email" required>
             </div>
             <div class="unit xs-1 s-1 m-1-4 m-1-4 text-center right inline push">
               <button class="btn" type="submit">Sign Up</button>
@@ -132,9 +132,9 @@
           <small class="micro">Copyright ©2020 Chatterbot</small>
         </div>
         <div class="unit xs-1 s-1 m-1-4 l-1-4 push-1-2 social">
-          <img class="img-flex" src="images/facebook.svg" alt="">
-          <img class="img-flex" src="images/instagram.svg" alt="">
-          <img class="img-flex" src="images/twitter.svg" alt="">
+          <img class="img-flex" src="images/facebook.svg" alt="" aria-details="facebook-icon">
+          <img class="img-flex" src="images/instagram.svg" alt="" aria-details="instagram-icon">
+          <img class="img-flex" src="images/twitter.svg" alt="" aria-details="twitter-icon">
         </div>
       </div>
     </div>
