--- a/pricing.html
+++ b/pricing.html
@@ -121,6 +121,10 @@
       </div>
     </section>
 
+    <div class="embed embed-1by1">
+      <img class="embed-item" src="images/builder.svg" alt="" aria-details="builder">
+    </div>
+
   </main>
 
   <footer role="contentinfo" class="island">
