--- a/sign-up.html
+++ b/sign-up.html
@@ -47,6 +47,9 @@
         <button class="btn" type="submit">Sign Up</button>
       </form>
       <p class="milli text-center">Already have an account? <a href="sign-in.html">Sign in!</a></p>
+      <div class="embed embed-1by1">
+        <img class="embed-item" src="images/builder.svg" alt="" aria-details="builder">
+      </div>
     </section>
   </main>
 
