--- a/tour.html
+++ b/tour.html
@@ -91,7 +91,7 @@
         <form class="push center-content" action="index.html" method="post">
           <div class="grid grid-middle center-content">
             <div class="unit xs-1 s-1 m-3-4 m-3-4 gutter push-1-2">
-              <label class="hidden" for="email">Email</label>
+              <label for="email">Email</label>
               <input id="email" type="email" placeholder="Enter your email" name="email" aria-label="enter your email" required>
             </div>
             <div class="unit xs-1 s-1 m-1-4 m-1-4 text-center right inline push-1-2">
