--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
     </section>
 
-    <section id="builder" tabindex="0" class="builder island">
+    <section id="builder" tabindex="0" class="builder island push">
       <div class="wrapper">
         <h2 class="text-center bold">Our Chatbot Builder</h2>
         <img class="img-flex gutter push-1-2" src="images/builder.svg" alt="" aria-details="builder-application">
@@ -64,8 +64,8 @@
         <form class="push center-content" action="index.html" method="post">
           <div class="grid grid-middle center-content">
             <div class="unit xs-1 s-1 m-3-4 m-3-4 gutter push">
-              <label for="email">Email</label>
-              <input id="email" type="email" placeholder="Enter your email" name="email" aria-label="enter your email" required>
+              <label class="hidden" for="email">Email</label>
+              <input id="email" type="email" placeholder="Enter your email here" name="email" aria-label="enter your email" required>
             </div>
             <div class="unit xs-1 s-1 m-1-4 m-1-4 text-center right inline push">
               <button class="btn" type="submit">Sign Up</button>
@@ -77,8 +77,8 @@
 
     <section id="testimonial" tabindex="0" class="testimonial island">
       <div class="grid grid-middle wrapper">
-        <div class="unit xs-1 s-1 m-1-2 l-1-2 island embed embed-1by1">
-          <img class="embed-item img-flex" src="images/testimonial.jpg" alt="" aria-details="jeremy-white">
+        <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
+          <img class="img-flex" src="images/testimonial.jpg" alt="" aria-details="jeremy-white">
         </div>
         <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
           <p class="text-center push-1-2 peta">"Chatterbot has helped us grow our business. We know exactly what our customers need and how to better serve them."</p>
