--- a/pricing.html
+++ b/pricing.html
@@ -87,7 +87,7 @@
           <div class="grid grid-middle center-content">
             <div class="unit xs-1 s-1 m-3-4 m-3-4 gutter push-1-2">
               <label for="email"></label>
-              <input id="email" type="email" placeholder="Enter your email" name="email" aria-label="enter your email" required>
+              <input id="email" type="email" placeholder="Enter your email here" name="email" aria-label="Enter your email to start your free trial" required>
             </div>
             <div class="unit xs-1 s-1 m-1-4 m-1-4 text-center right inline push-1-2">
               <button class="btn" type="submit">Sign Up</button>
@@ -120,10 +120,6 @@
         </div>
       </div>
     </section>
-
-    <div class="embed embed-1by1">
-      <img class="embed-item" src="images/builder.svg" alt="" aria-details="builder">
-    </div>
 
   </main>
 
