--- a/sign-in.html
+++ b/sign-in.html
@@ -43,7 +43,7 @@
         <label class="micro" for="password">Password</label>
         <input class="push" type="password" name="password" id="password" required>
       </form>
-      <p class="milli text-center">Don't have an account? <a class="text-decoration" href="sign-up.html">Sign up!</a></p>
+      <p class="milli text-center">Don't have an account? <a class="sign-link" href="sign-up.html">Sign up here!</a></p>
     </section>
   </main>
 
@@ -95,7 +95,6 @@
           <img class="img-flex" src="images/instagram.svg" alt="" aria-details="instagram-icon">
           <img class="img-flex" src="images/twitter.svg" alt="" aria-details="twitter-icon">
         </div>
-
       </div>
     </div>
   </footer>
