--- a/sign-up.html
+++ b/sign-up.html
@@ -46,10 +46,7 @@
         <input class="push" type="password" name="confirmation" id="confirmation" required>
         <button class="btn" type="submit">Sign Up</button>
       </form>
-      <p class="milli text-center">Already have an account? <a href="sign-in.html">Sign in!</a></p>
-      <div class="embed embed-1by1">
-        <img class="embed-item" src="images/builder.svg" alt="" aria-details="builder">
-      </div>
+      <p class="milli text-center">Already have an account? <a class="sign-link" href="sign-in.html">Sign in here!</a></p>
     </section>
   </main>
 
