--- a/tour.html
+++ b/tour.html
@@ -39,8 +39,8 @@
     <section id="templates" tabindex="0" class="island wrapper">
       <h2 class="text-center pad-t gutter-2">Choose from one of our existing templates to create your own chatbot.</h2>
       <div class="grid">
-        <div class="unit xs-1 s-1 m-1-2 l-1-2 island embed embed-9by16">
-          <img class="img-flex pad-b embed-item" src="images/classic.svg" alt="" aria-details="classic-template">
+        <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
+          <img class="img-flex pad-b" src="images/classic.svg" alt="" aria-details="classic-template">
           <p class="text-center bold tera push">Classic</p>
         </div>
         <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
@@ -51,8 +51,8 @@
     </section>
 
     <section id="features" tabindex="0" class="island features">
-      <div class="scrollable">
-        <table class="wrapper push">
+      <div>
+        <table class="wrapper push scrollable">
           <caption class="not-italic text-center bold peta pad-t">Features</caption>
           <thead>
             <tr>
@@ -91,8 +91,8 @@
         <form class="push center-content" action="index.html" method="post">
           <div class="grid grid-middle center-content">
             <div class="unit xs-1 s-1 m-3-4 m-3-4 gutter push-1-2">
-              <label for="email">Email</label>
-              <input id="email" type="email" placeholder="Enter your email" name="email" aria-label="enter your email" required>
+              <label class="hidden" for="email">Email</label>
+              <input id="email" type="email" placeholder="Enter your email here" name="email" aria-label="Enter your email to sign up" required>
             </div>
             <div class="unit xs-1 s-1 m-1-4 m-1-4 text-center right inline push-1-2">
               <button class="btn" type="submit">Sign Up</button>
