Add some images

--- a/pricing.html
+++ b/pricing.html
@@ -37,7 +37,7 @@
   <main role="main" id="main" tabindex="0">
     <section id="packages" class="island push-1-2">
       <h2 class="text-center">Packages</h2>
-      <div class="grid grid-stretch center-content">
+      <div class="grid grid-stretch center-content push-1-2">
         <div class="unit xs-1 s-1 m-1-3 l-1-3 card push content-distribute">
           <h3 class="card-title island-1-2 push-0 bold text-center">Starter</h3>
           <div class="island">
@@ -48,7 +48,7 @@
               <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt="" aria-details="check-mark"></i> basic reporting</li>
               <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt="" aria-details="check-mark"></i> data security</li>
             </ul>
-            <a class="pricing-btn text-center milli" href="#" aria-label="Learn more about the starter package">Learn More</a>
+            <a class="pricing-btn text-center milli" href="#" aria-label="Learn more about the starter package">Try Starter</a>
           </div>
         </div>
         <div class="unit xs-1 s-1 m-1-3 l-1-3 card push content-distribute">
@@ -58,10 +58,10 @@
             <ul class="list-group gutter-1-2 milli">
               <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt="" aria-details="check-mark"></i> 6 chatbots</li>
               <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt="" aria-details="check-mark"></i> 3 months one-on-one support</li>
-              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt="" aria-details="check-mark"></i> advanced reporting</li>
+              <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt="" aria-details="check-mark"></i> premium reporting</li>
               <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt="" aria-details="check-mark"></i> data security</li>
             </ul>
-            <a class="pricing-btn text-center milli" href="#" aria-label="Learn more about the team package">Learn More</a>
+            <a class="pricing-btn text-center milli" href="#" aria-label="Learn more about the team package">Try Team</a>
           </div>
         </div>
         <div class="unit xs-1 s-1 m-1-3 l-1-3 card push content-distribute">
@@ -74,7 +74,7 @@
               <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt="" aria-details="check-mark"></i> premium reporting</li>
               <li class="push-1-2"><i class="icon i-16"><img src="images/right.svg" alt="" aria-details="check-mark"></i> data security</li>
             </ul>
-            <a class="pricing-btn text-center milli" href="#" aria-label="Learn more about the business package">Learn More</a>
+            <a class="pricing-btn text-center milli" href="#" aria-label="Learn more about the business package">Try Business</a>
           </div>
         </div>
       </div>
@@ -118,6 +118,7 @@
             <p>Customer feedback will be essential in order to measure your chatbot’s success. As well as customer feedback, your agents will be crucial in providing feedback.</p>
           </div>
         </div>
+        <img class="img-flex" src="images/person-1.jpg" alt="" aria-details="Man holding smart phone">
       </div>
     </section>
 
@@ -167,9 +168,9 @@
           <small class="micro">Copyright ©2020 Chatterbot</small>
         </div>
         <div class="unit xs-1 s-1 m-1-4 l-1-4 push-1-2 social">
-          <img class="img-flex" src="images/facebook.svg" alt="" aria-details="facebook-icon">
-          <img class="img-flex" src="images/instagram.svg" alt="" aria-details="instagram-icon">
-          <img class="img-flex" src="images/twitter.svg" alt="" aria-details="twitter-icon">
+          <img class="img-flex" src="images/facebook-blue.svg" alt="" aria-details="facebook-icon">
+          <img class="img-flex" src="images/instagram-blue.svg" alt="" aria-details="instagram-icon">
+          <img class="img-flex" src="images/twitter-blue.svg" alt="" aria-details="twitter-icon">
         </div>
 
       </div>
