--- a/sign-in.html
+++ b/sign-in.html
@@ -91,9 +91,9 @@
           <small class="micro">Copyright ©2020 Chatterbot</small>
         </div>
         <div class="unit xs-1 s-1 m-1-4 l-1-4 push-1-2 social">
-          <img class="img-flex" src="images/facebook.svg" alt="" aria-details="facebook-icon">
-          <img class="img-flex" src="images/instagram.svg" alt="" aria-details="instagram-icon">
-          <img class="img-flex" src="images/twitter.svg" alt="" aria-details="twitter-icon">
+          <img class="img-flex" src="images/facebook-blue.svg" alt="" aria-details="facebook-icon">
+          <img class="img-flex" src="images/instagram-blue.svg" alt="" aria-details="instagram-icon">
+          <img class="img-flex" src="images/twitter-blue.svg" alt="" aria-details="twitter-icon">
         </div>
       </div>
     </div>
